# MicroscopeControl

./: .gitignore  README.md  pyproject.toml  setup.cfg
Cicely/: ImageDisplay.py  focus_control.py  stage_control.py  userInterface.py
adam/: FocusControl.py  StageControl.py  openCVSnapshot.py
extras/Cicely/: image_size.py  userInterface.py
extras/old/: Colors.py  ScanSummarize.py  UnsupervisedImageProcessing.py
extras/utils/: ContrastCalculator.py  FilterDatabase.py  MicroscopeShell.py  _FilterDatabase.json  grid.py  source_spectrum.txt
src/: CameraControl.py  Colors.py  CreateDatabase.py  FindFlakes.json  FindFlakes.py  FocusControl.py  ImageAnalyzer.json  ImageAnalyzer.py  ImageProcessing.py  ImageProcessor.py  MicroscopeControl.py  MicroscopeShell.py  ProcessScan.py  Progress.py  Scan.json  Scan.py  ScanContinuous.py  ScanProcessing.json  ScanProcessing.py  ScanProcessor.json  ScanProcessor.py  ScanSummarize.json  ScanSummarize.py  SmartScan.py  StageControl.py  UnsupervisedImageProcessing.json  UnsupervisedImageProcessing.py  _ProcessScan.json  _default_args.json  _graphene.json  _scan.json  _smartscan.json  todo.txt
src/calibration_data/: _graphene_on_90nmSiO2_Silicon.json  _graphene_on_SiO2_Silicon.json  _graphene_on_pdms.json
src/hardware_code/: Progress.py
src/microscope_control/hardware/: camera_control.py  microscope_control.py  stage_control.py
src/microscope_control/image_processing/: image_processing.py
src/old/: ImageAnalyzer.json  ImageProcessor.py  ScanSummarize.py  UnsupervisedImageProcessing.py
src/utils/: FPContrastCalculator.py
(+2 files in other folders)
