[metadata]
name = microscope-control
version = 0.0.1
author = Adam Robinson
author_email = magnanimousllamacopter@gmail.com
description = Code for controlling an automated microscope designed and built in Dr. Patrick Voras lab at George Mason University.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/derangedhk417/MicroscopeControl
project_urls =
    Bug Tracker = https://github.com/derangedhk417/MicroscopeControl/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Natural Language :: English
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed
    License :: Other/Proprietary License
    Operating System :: Microsoft :: Windows :: Windows 10
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src